--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,40 @@ body {
     font-family: "Azeret Mono", monospace;
 }
 
+.tile {
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.description {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-top: 22px;
+}
+
+.learn-btn {
+    padding: 12px 20px 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    cursor: pointer;
+
+}
+
 /* Banner Section Style */
 
 .banner-container {
@@ -18,6 +52,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     max-height: 652px;
+    margin-bottom: 154px;
 }
 
 .banner-content {
@@ -65,4 +100,65 @@ body {
     border: none;
     margin-top: 33px;
     margin-bottom: 44px;
+    cursor: pointer;
+}
+
+/* Development Section Style */
+
+.developer-container {
+    max-width: 946px;
+    margin: 0 auto;
+}
+
+.development-box {
+    margin-top: 106px;
+    margin-bottom: 128px;
+}
+
+.left-box, .right-box {
+    display: flex;
+    justify-content: space-between;
+    gap: 99px;
+    margin-bottom: 138px;
+
+}
+
+.box-content {
+    max-width: 477px;
+}
+
+.box-content-2{
+    margin-left: 48px;
+    max-width: 477px;
+    margin-right: 100px;
+}
+
+.box-title {
+    color: rgba(13, 19, 33, 0.7);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 16px;
+}
+
+.box-description {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 32px;
+}
+
+.bix-image {
+    width: 259.56px;
+    height: 217.01px;
+}
+
+.bix-image img {
+    width: 100%;
+    height: 100%;
 }
