--- a/style/style.css
+++ b/style/style.css
@@ -50,6 +50,7 @@ body {
 .banner-container {
     background-image: url("../assets/Hero-bg.png");
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     max-height: 652px;
     margin-bottom: 154px;
@@ -105,9 +106,20 @@ body {
 
 /* Development Section Style */
 
+.developer-section {
+    max-width: 1140px;
+    margin: 0 auto;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .developer-container {
     max-width: 946px;
-    margin: 0 auto;
+    margin-top: 80px;
 }
 
 .development-box {
@@ -115,19 +127,31 @@ body {
     margin-bottom: 128px;
 }
 
-.left-box, .right-box {
+.left-box {
     display: flex;
     justify-content: space-between;
     gap: 99px;
     margin-bottom: 138px;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+    padding: 48px;
+}
 
+.right-box {
+    display: flex;
+    justify-content: space-between;
+    gap: 99px;
+    margin-bottom: 138px;
+    border-radius: 16px;
+    background: linear-gradient(270.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+    padding: 48px;
 }
 
 .box-content {
     max-width: 477px;
 }
 
-.box-content-2{
+.box-content-2 {
     margin-left: 48px;
     max-width: 477px;
     margin-right: 100px;
@@ -161,4 +185,58 @@ body {
 .bix-image img {
     width: 100%;
     height: 100%;
+}
+
+/* My Inspiration Section Style */
+.inspiration-container {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.inspiration-content {
+    max-width: 852px;
+    margin: 0 auto;
+}
+
+.inspiration-title {
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.inspiration-description {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 48px;
+}
+
+.video {
+    width: 1140px;
+    height: 614px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.video-content {
+    width: 1076px;
+    height: 550px;
+    border-radius: 16px;
+    border: none;
 }
