--- a/style/style.css
+++ b/style/style.css
@@ -325,3 +325,63 @@ body {
     background: rgba(255, 223, 0, 0.05);
     padding: 40px;
 }
+
+/* Support Section Style */
+.support-container {
+    background-image: linear-gradient(180.00deg, rgb(7, 2, 17),rgba(7, 2, 17, 0) 100%), url("../assets/handshake.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    max-width: 1140px;
+    height: 314px;
+    margin: 0 auto;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+
+}
+
+.support-title {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.support-description {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.search {
+    padding: 19px 20px 19px 20px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    width: 548px;
+    color: rgba(13, 19, 33, 0.4);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    text-align: left;
+}
+
+.submit-btn {
+    padding: 19px 20px 19px 20px;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    width: 120px;
+    color: rgb(13, 19, 33);
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+}
