--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@
     padding: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Azeret Mono", monospace;
 }
@@ -68,6 +72,32 @@ body {
     letter-spacing: 0%;
     text-align: center;
     margin-bottom: 48px;
+}
+
+/* Navbar Style */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1140px;
+    margin: 0 auto;
+    height: 100px;
+}
+
+nav h1 {
+    color: rgb(13, 19, 33);
+    font-size: 28px;
+    font-weight: 800;
+    text-align: left;
+}
+
+.resume-btn {
+    padding: 17px 24px 17px 24px;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    border-radius: 8px;
+    opacity: 0.8;
+
 }
 
 /* Banner Section Style */
@@ -220,6 +250,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 150px;
+    margin-top: 88px;
 }
 
 .basic-content {
@@ -312,6 +343,7 @@ body {
     text-align: left;
     text-decoration-line: underline;
     border: none;
+    background: none;
 }
 
 .box2 {
@@ -328,7 +360,7 @@ body {
 
 /* Support Section Style */
 .support-container {
-    background-image: linear-gradient(180.00deg, rgb(7, 2, 17),rgba(7, 2, 17, 0) 100%), url("../assets/handshake.jpg");
+    background-image: linear-gradient(180.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%), url("../assets/handshake.jpg");
     background-position: center;
     background-repeat: no-repeat;
     max-width: 1140px;
@@ -384,4 +416,42 @@ body {
     font-size: 18px;
     font-weight: 600;
     text-align: center;
+}
+
+/* Footer Section Style */
+
+#footer {
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.03);
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content {
+    margin: 0 auto;
+    width: 1140px;
+    height: 36px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-title {
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.icon {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    cursor: pointer;
+}
+
+.icon li {
+    list-style: none;
 }
