--- a/style/style.css
+++ b/style/style.css
@@ -195,7 +195,7 @@ nav h1 {
 .right-box {
     display: flex;
     justify-content: space-between;
-    gap: 99px;
+    gap: 20px;
     margin-bottom: 138px;
     border-radius: 16px;
     background: linear-gradient(270.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
@@ -209,7 +209,7 @@ nav h1 {
 .box-content-2 {
     margin-left: 48px;
     max-width: 477px;
-    margin-right: 100px;
+    margin-right: 80px;
 }
 
 .box-title {
@@ -232,16 +232,24 @@ nav h1 {
     margin-bottom: 32px;
 }
 
-.bix-image {
+.box-image {
     width: 259.56px;
     height: 217.01px;
 }
 
-.bix-image img {
+.box-image img {
     width: 100%;
     height: 100%;
 }
 
+.box-image-2{
+    width: 213px;
+    height: 208px;
+}
+.box-image-2{
+    width: 100%;
+    height: 100%;
+}
 /* My Inspiration Section Style */
 .inspiration-container {
     margin: 0 auto;
