--- a/style/style.css
+++ b/style/style.css
@@ -97,6 +97,7 @@ nav h1 {
     border: 1px solid rgb(13, 19, 33);
     border-radius: 8px;
     opacity: 0.8;
+    cursor: pointer;
 
 }
 
@@ -352,6 +353,7 @@ nav h1 {
     text-decoration-line: underline;
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .box2 {
@@ -424,6 +426,7 @@ nav h1 {
     font-size: 18px;
     font-weight: 600;
     text-align: center;
+    border: none;
 }
 
 /* Footer Section Style */
